css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";

// Our variables
$base-font-family: "Source Sans Pro", Arial, sans-serif;
$base-font-size:   17px;
$base-font-weight: 500;
$small-font-size:  $base-font-size * 0.875;
$base-line-height: 1.5;

$spacing-unit:     30px;

$text-color:       #4b4f5c;
$background-color: #ffffff;
$brand-color:      #2a7ae2;

$grey-color:       #828282;
$grey-color-light: lighten($grey-color, 40%);
$grey-color-dark:  darken($grey-color, 25%);

// Width of the content area
$content-width:    800px;

$on-palm:          600px;
$on-laptop:        800px;

$link-color:       #337ab7;
$link-hover-color: #23527c;

body {
  font-family: $base-font-family;
  font-size: $base-font-size;
  color: $text-color;
  line-height: 1.42857143;
}

pre, code {
  font-family: "Source Code Pro", "Courier New", "Courier";
  font-weight: 500;
  font-size: 14px;
}

p, h2 {
  margin: 20px 0;
}

h1 {
  line-height: 1.1;
  font-size: 42px;
  margin: 0 0 20px;
}

h2 {
  font-weight: 500;
  font-size: 30px;
}

h3,
h3 code {
  font-size: 24px;
}

h4 {
  font-weight: bold;
}

p {
  line-height: 1.6;
}

section {
  margin-top: 30px;
  padding-top: 10px;
  border-top: 1px solid #eef1f3;
}

section:first-of-type {
  border-top: 0;
  padding-top: 0;
}

strong {
  font-weight: 600;
}

.breadcrumbs {
  text-transform: uppercase;
  font-weight: 400;
  font-size: 14px;
}

.breadcrumbs a {
  color: #4b4f5c;
}

.post-list {
  margin: 0;
  padding: 0;
}

.post-list li {
  list-style-type: none;
}

.post-list .post-meta {
  float: right;
}

.post .post-author {
  margin-left: 12px;
}

.post .avatar {
  position: relative;
  border-radius: 2px;
  height: 18px;
  width: 18px;
  margin-right: 6px;
}

.docs-content h2 {
  margin-top: 42px;
}

.docs-content h3 {
  margin-top: 32px;
}

.docs-content h2+h3 {
  margin-top: 20px;
}

.docs-content tr:not(:last-child) {
  td, th { padding-bottom: 0.5em; }
}

.docs-content td:not(:last-child) {
  padding-right: 1em;
}

h1, h2, h3, h4, h5, h6 {
  position: relative;

  .anchor {
    position: relative;
    padding-right: 4px;
    margin-left: -20px;
    line-height: 1;
    font-size: 17px;
    visibility: hidden;
  }
}

h1:hover, h2:hover, h3:hover,
h4:hover, h5:hover, h6:hover {
  .anchor {
    visibility: visible;
  }
}

.site-wrapper > footer {
  text-align: center;
  width: 100%;
  height: 60px;
  line-height: 20px;
  padding-top: 20px;
  margin-top: 120px;
}

.docs-version {
  display: inline-block;
  padding: .1em .4em;
  vertical-align: middle;
  font-size: 18px;
  font-weight: 200;
  -webkit-font-smoothing: initial;
  color: #7c9398;
  border: 1px solid #d1d9db;
  border-radius: 3px;

}

@import 'code';
@import 'syntax_highlight';

